--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,33 @@
+#spring:
+#  datasource:
+#    url: jdbc:h2:tcp://localhost/~/note
+#    username: aa
+#    password:
+#    driver-class-name: org.h2.Driver
+#  jpa:
+#    hibernate:
+#      ddl-auto: update
+#    properties:
+#      hibernate:
+#        format_sql: true
+#logging.level:
+#  org.hibernate.SQL: debug
+
+server:
+  port: 8088
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/note
-    username: aa
-    password:
-    driver-class-name: org.h2.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    #    url: jdbc:mysql://localhost:3306/helloDev
+    username: root
+    password: 1234
+    url: jdbc:mysql://mysql-container:3306/helloDev
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: update  # 테이블 자동 생성 및 업데이트 안 만들어줄거면 필수임
     properties:
       hibernate:
         format_sql: true
-logging.level:
-  org.hibernate.SQL: debug
+#  test환경에서 사용할 시 필요하다.
+#  profiles:
+#    active: test
