--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,9 @@
 server:
   port: 8080
 spring:
+  thymeleaf:
+    prefix: classpath:/templates
+    suffix: .html
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
