--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   db:
@@ -20,6 +19,8 @@ services:
     container_name: spring-boot-container
     ports:
       - "8080:8080"
+    environment:
+      - JAVA_OPTS=-Xms256m -Xmx500m 
     networks:
       - springboot-mysql-net
     depends_on:
